# FurReact_v0.2

./: .gitignore  CLAUDE.md  awawa.md
eye_data_forwarder/: Cargo.toml  README.md
eye_data_forwarder/scripts/: install_on_frame.sh
eye_data_forwarder/src/: main.rs
eye_data_forwarder/systemd/: solcatears-forwarder.service  solcatears-usb-host.service
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/scripts/: echo_test.py
firmware/src/: main.rs
